# voice-echo

./: .gitignore  CUGReport.cls  Cargo.toml  README.md  main.tex  reference.bib  基于ESP32C3单片机的回声测距验证实验.md
src/: async_adc.rs  listen.rs  macros.rs  main.rs  speak.rs
