[package]
name = "voice-echo"
version = "0.1.0"
authors = ["nan-mu <mu.nan.11@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19", features = ["esp32c3", "async"] }
esp-println = { version = "0.10.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0" }
microfft = "0.6.0"
embassy-sync = "0.6.0"
esp-hal-embassy = { version = "0.2.0", features = ["esp32c3"] }
embassy-executor = { version = "0.5", package = "embassy-executor", features = [
    "arch-riscv32",
], optional = true }
embassy-time = { version = "0.3", optional = true }
static_cell = "2.1.0"
nb = { version = "1.1.0" }
critical-section = "1.1.2"
fugit = "0.3.7"

[features]
default = ["embassy"]
log = ["embassy-executor?/log"]
defmt = ["esp-hal-embassy/defmt", "embassy-executor?/defmt"]
embassy = [
    "embassy-executor",
    "embassy-time",
    "embassy-executor/task-arena-size-20480",
]
esp32c3 = ["esp-hal-embassy/esp32c3"]
